2010-09-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Fix retain/release bugs spotted by clang.

2010-09-10  Adam Fedor  <fedor@gnu.org>

	* configure.ac: Check for dladdr without requiring -ldl
	* configure, Headers/Additions/GNUstepBase/config.h.in: Regen

2010-09-09  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/ObjectiveC2/runtime.c: fix a typo
	* Source/NSObject.m: c90 compatibliity
	
2010-09-09  Eric Wasylishen <ewasylishen@gmail.com>

	* Source/ObjectiveC2/runtime.c:
	Change sel_getUid to call sel_registerName, in line with OS X
	behaviour since 10.0

2010-09-02 9avid Chisnall <theraven@gna.org>

	* Source/NSBundle.m
	* Source/NSMethodSignature.m
	* Source/NSDebug.m
	* Source/GSFFIInvocation.m
	* Source/GSPrivate.h
	* Source/NSInvocation.m
	* Source/NSCopyObject.m
	* Source/NSObject.m
	* Source/Additions/GSXML.m
	* Source/Additions/GSObjCRuntime.m
	* Source/NSConnection.m
	* Source/NSObjCRuntime.m
	* Source/NSProxy.m
	* Source/NSProtocolChecker.m
	* Source/NSSerializer.m
	* Source/NSDistantObject.m
	* Headers/Foundation/NSInvocation.h
	* Headers/Additions/GNUstepBase/DistributedObjects.h

	A huge blob of changes to make -base build with libobjc2, without
	using the old libobjc2 headers.

	Most of these changes involve simply removing direct manipulation
	of any runtime structures and replacing them with runtime function
	calls.  For example class->name becomes class_getName(class) and so on.

	libobjc2, like the Apple runtime, the NeXT runtime, and every
	version of the Objective-C spec, calls the class pointer in id isa.
	A few files now have #define class_pointer isa at the top.
	This line replaces class_pointer in the old GNU libobjc headers
	with isa so either class_pointer or isa can be used for accessing
	the class of an object.  Note: object_getClass() should be used
	in most cases because, in some future version of the runtime,
	this will skip things like lock classes and other hidden classes
	(e.g. KVO classes).
